<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rtsp_image_transport</name>
    <version>2.0.1</version>
    <description>Transmit video streams with the Real-Time Streaming Protocol</description>
    <license>Apache-2.0</license>
    <author email="timo.roehling@fkie.fraunhofer.de">Timo Röhling</author>
    <maintainer email="timo.roehling@fkie.fraunhofer.de">Timo Röhling</maintainer>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>cv_bridge</depend>
    <depend>ffmpeg</depend>
    <depend>image_transport</depend>
    <depend>live555_vendor</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
